--- a/blog-details.html
+++ b/blog-details.html
@@ -120,9 +120,9 @@
                                             <!--About Menu Start-->
                                             <li class="menu-item-has-children"><a href="about.html">About Us</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="about.html">About One</a></li>
-                                                    <li><a href="about2.html">About Two</a></li>
-                                                    <li><a href="about3.html">About Three</a></li>
+                                                    <li><a href="about.html">Founders</a></li>
+                                                    <li><a href="about2.html">Testimonials</a></li>
+                                                    
                                                 </ul>
                                             </li>
                                             <!--About Menu End--> 
