--- a/blog-details.html
+++ b/blog-details.html
@@ -611,18 +611,15 @@
                         <div class="col-lg-4 col-md-4">
                             <h5 class="footer-title">OUR SITEMAP</h5>
                             <ul class="sitemap-widget">
-                                <li class="active"><a href="index-2.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Home</a></li>
+								<li class="active"><a href="index-2.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Home</a></li>
                                 <li ><a href="about.html"><i class="fa fa-angle-right" aria-hidden="true"></i>About</a></li>
+                                <li ><a href="pages.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Pages</a></li>
+                                <li ><a href="gallery.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Gallery</a></li>
                                 <li><a href="courses.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Courses</a></li>
                                 <li><a href="courses-details.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Courses Details</a></li>
                                 <li><a href="events.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Events</a></li>
-                                <li><a href="events-details.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Events Details</a></li>                                
-                                <li><a href="blog.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Blog</a></li>
-                                <li><a href="blog-details.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Blog Details</a></li>
-                                <li><a href="teachers.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Teachers</a></li>
-                                <li><a href="teachers-single.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Teachers Details</a></li>
+                                <li ><a href="blog.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Blog</a></li>
                                 <li><a href="contact.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Contact</a></li>
-                                <li><a href="error-404.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Error 404</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-4 col-md-4">
