--- a/contact.html
+++ b/contact.html
@@ -395,7 +395,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="footer-share">
+                    <div class="footer-share">Follow Us
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
