--- a/blog-details.html
+++ b/blog-details.html
@@ -62,8 +62,8 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="rs-toolbar-left">
-								<div class="welcome-message">
-									<i class="fa fa-bank"></i><span>6001-853-307 | 7099-007-771 <br> info@mindpoweracademy.in</span> 
+								<div class="Phone number text-white">
+									<i class=""></i><span> 6001-853-307 | 7099-007-771 <br> info@mindpoweracademy.in</span> 
 								</div>
 							</div>
 						</div>
