--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,8 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="rs-toolbar-left">
-								<div class="welcome-message">
-									<i class=""></i><span>6001-853-307 | 7099-007-307 <br> info@mindpoweracademy.in</span> 
+								<div class="Phone number text-white">
+									<i class=""></i><span> 6001-853-307 | 7099-007-307 <br> info@mindpoweracademy.in</span> 
 								</div>
 							</div>
 						</div>
@@ -78,6 +78,7 @@
 
 									</ul>
 								</div>
+								<a href="#" class="apply-btn">Apply Now</a>
 
 							</div>
 						</div>
@@ -199,7 +200,7 @@
 		<!-- Contact Section Start -->
 		<div class="contact-page-section sec-spacer">
         	<div class="container">
-        		<div id="googleMap"></div>
+        		
         		<div class="row contact-address-section">
     				<div class="col-md-4 pl-0">
     					<div class="contact-info contact-address">
