--- a/courses.html
+++ b/courses.html
@@ -62,8 +62,8 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="rs-toolbar-left">
-								<div class="welcome-message">
-									<i class="fa fa-bank"></i><span>6001-853-307 | 7099-007-307 <br>info@mindpoweracademy.in</span> 
+								<div class="Phone Number text-white ">
+									<i class=""></i><span> 6001-853-307 | 7099-007-307 <br>info@mindpoweracademy.in</span> 
 								</div>
 							</div>
 						</div>
@@ -78,6 +78,7 @@
 										<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
+                                <a href="#" class="apply-btn">Apply Now</a>
 							</div>
 						</div>
 					</div>
