--- a/index2.html
+++ b/index2.html
@@ -63,8 +63,8 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="rs-toolbar-left">
-							<div class="welcome-message">
-								<i class="fa fa-bank"></i><span>Welcome to Mind Power Academy</span>
+							<div class="Phone number text-white">
+								<i class=""></i><span> 6001-853-307 | 7099-007-771 <br> info@mindpoweracademy.in</span>
 							</div>
 						</div>
 					</div>
@@ -79,6 +79,7 @@
 									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 								</ul>
 							</div>
+							<a href="#" class="apply-btn">Apply Now</a>
 						</div>
 					</div>
 				</div>
