--- a/index2.html
+++ b/index2.html
@@ -478,7 +478,7 @@
 											<div class="d-flex flex-row align-items-center mb-4">
 
 												<div class="form-outline flex-fill mb-0">
-													<input type="password" id="form3Example4c" class="form-control" />
+													<input type="MobileNumber" id="form3Example4c" class="form-control" />
 													<label class="form-label" for="form3Example4c">Mobile Number</label>
 												</div>
 											</div>
@@ -486,11 +486,13 @@
 											<div class="d-flex flex-row align-items-center mb-4">
 
 												<div class="form-outline flex-fill mb-0">
-													<input type="password" id="form3Example4cd" class="form-control" />
+													<input type="Course" id="form3Example4cd" class="form-control" />
 													<label class="form-label" for="form3Example4cd">Select
 														Course</label>
+														
 												</div>
 											</div>
+											
 
 											<div class="form-check d-flex justify-content-center mb-5">
 												<input class="form-check-input me-2" type="checkbox" value=""
